colang-cli/tests/samples/features/traits/compile_error/field.co
trait Foo {
    x: int;
}

fun main() { }
